examples/test/testpolicy6226.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6226
  namespace: namespace224
spec:
  podSelector:
    matchLabels:
      key10: value11
      key12: value17
      key25: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value15
          key41: value0
      podSelector:
        matchLabels:
          key21: value6
